workspace = { members = [
    "uller_macro",
], package.version = "0.0.1", package.authors = [
    "TOwInOK",
] }
[package]
version.workspace = true
authors.workspace = true
name = "uller"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.5.2"
uller_macro = { path = "./uller_macro" }

serde = { version = "1.0.204", optional = true, features = ["derive"] }
reqwest = { version = "0.12.5", features = ["json"], optional = true }
async-trait = { version = "0.1.81", optional = true }
bytes = { version = "1.6.1", optional = true }


[features]
default = ["juller", "buller"]
juller = ["serde", "async-trait", "reqwest"]
buller = ["bytes", "async-trait", "reqwest"]
full = ["juller", "buller"]
