[workspace]
members = ["uller_macro"]

[workspace.package]
authors = ["TOwInOK"]
license = "MIT"

[package]
version = "0.1.2"
authors.workspace = true
package.license = true
license.workspace = true
name = "uller"
edition = "2021"
categories = []
repository = "https://github.com/TOwInOK/uller"
description = "Generate/Donwload your links"
documentation = ""

[dependencies]
url = "2.5.2"
uller_macro = { version = "0.1.1", path = "./uller_macro", optional = true }
serde = { version = "1.0.204", optional = true }
reqwest = { version = "0.12.5", features = ["json"], optional = true }
async-trait = { version = "0.1.81", optional = true }
bytes = { version = "1.6.1", optional = true }

[dev-dependencies]
mockito = "1.5.0"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
tokio-macros = "2.4.0"

uller_macro = { version = "0.1.1", path = "./uller_macro", features = ["full"] }
uller = { path = ".", features = ["full"] }

[features]
macro = ["uller_macro"]
juller = ["serde", "async-trait", "reqwest", "uller_macro/juller", "macro"]
buller = ["bytes", "async-trait", "reqwest", "uller_macro/buller", "macro"]
full = ["juller", "buller", "macro"]
default = []

[package.metadata.docs.rs]
all-features = true
