[package]
authors.workspace = true
package.license = true
name = "uller_macro"
edition = "2021"
version = "0.1.0"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
url = { version = "*" }

[lib]
proc-macro = true

[features]
default = []
buller = []
juller = []
full = ["buller", "juller"]
