[package]
authors.workspace = true
package.license = true
license.workspace = true
name = "uller_macro"
edition = "2021"
version = "0.1.21"
description = "Macro-crate for uller"
documentation = "https://docs.rs/uller_macro"
keywords = ["parser", "url", "http", "uller", "macros"]
repository = "https://github.com/TOwInOK/uller/tree/main/uller_macro"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
url = { version = "2.5.2" }

[lib]
proc-macro = true

[features]
default = []
buller = []
juller = []
full = ["buller", "juller"]

[package.metadata.docs.rs]
all-features = true
